# VJ-MLLib

./: .gitignore  CMakeLists.txt  Project-Plan.md  README.md
MLBase/: CMakeLists.txt
MLBase/activations/: CMakeLists.txt
MLBase/activations/includes/: ReLU.h  Sigmoid.h  activations.h
MLBase/activations/src/: ReLU.cpp  Sigmoid.cpp
MLBase/includes/: losses.h  node.h
MLBase/losses/: CMakeLists.txt
MLBase/losses/includes/: MSELoss.h  losses.h
MLBase/losses/src/: losses.cpp
MLBase/network/: CMakeLists.txt
MLBase/network/includes/: layer.h  model.h  node.h
MLBase/network/src/: layer.cpp  node.cpp
MLBase/src/: losses.cpp
includes/: CMakeLists.txt  dataHandler.h  matrix.cpp  matrix.hpp
linalg/: CMakeLists.txt
linalg/includes/: dataHandler.h  matrix.h  matrix.hpp  tensor.h  utils.h
linalg/src/: dataHandler.cpp  matrix.cpp  utils.cpp
src/: dataHandler.cpp  main.cpp
tests/: testBaseML.cpp  testMatrix.cpp
